[package]
name = "api-99bugs-display"
version = "0.4.0"
authors = ["Sille Van Landschoot <info@sillevl.be>", "Nico De Witte <nico.dewitte@vives.be"]
edition = "2021"
description = "API for the 99 bugs display"

[dependencies]
serde_json = "1.0.68"
image = "0.23.14"
hyper = { version = "0.14.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
driver_99bugs_display = "0.2.1"
base64 = "0.20.0"